20150729teddy(修改通讯录)

--- a/ShanHongProject/Main.storyboard
+++ b/ShanHongProject/Main.storyboard
@@ -215,7 +215,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="contactSelectAction:" destination="dSu-9C-diG" eventType="touchUpInside" id="11f-ma-egy"/>
+                                    <segue destination="9WC-D7-anr" kind="push" id="mMt-FM-ptx"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FJL-Sg-SZr">
@@ -467,6 +467,40 @@
             </objects>
             <point key="canvasLocation" x="-425" y="107"/>
         </scene>
+        <!--Contact First Controller-->
+        <scene sceneID="YHA-EM-l0U">
+            <objects>
+                <viewController id="9WC-D7-anr" customClass="ContactFirstController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="dfR-fh-tCK"/>
+                        <viewControllerLayoutGuide type="bottom" id="iqf-S4-fgV"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="a9K-9K-XfK">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="nac-gj-GUP">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="nac-gj-GUP" firstAttribute="leading" secondItem="a9K-9K-XfK" secondAttribute="leading" id="Caa-Ic-bqb"/>
+                            <constraint firstAttribute="trailing" secondItem="nac-gj-GUP" secondAttribute="trailing" id="LHj-EJ-FfE"/>
+                            <constraint firstAttribute="bottom" secondItem="nac-gj-GUP" secondAttribute="bottom" id="iZa-2d-zjZ"/>
+                            <constraint firstItem="nac-gj-GUP" firstAttribute="top" secondItem="a9K-9K-XfK" secondAttribute="top" id="rGi-tt-Y9K"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="Jbf-mF-kUV"/>
+                    <connections>
+                        <outlet property="myTableView" destination="nac-gj-GUP" id="fcY-uD-poi"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oNm-DM-s1k" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="149" y="150"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="vzx-lf-ivc">
             <objects>
@@ -484,7 +518,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3MK-Me-NqH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3" y="137"/>
+            <point key="canvasLocation" x="481" y="-545"/>
         </scene>
         <!--防汛预案-->
         <scene sceneID="WNU-pS-YgP">
